Add (none matching) sidewalk example

--- a/westchestergis/index.html
+++ b/westchestergis/index.html
@@ -1,9 +1,8 @@
 <html>
     <head>
         <meta charset=utf-8 />
-        <title>Esri Leaflet Quickstart</title>
+        <title>Westchester GIS</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-        <title>mapillary-js + Esri Leaflet.js example</title>
         <link rel="stylesheet" href="https://npmcdn.com/mapillary-js@1.0.1/dist/mapillary-js.min.css">
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
         <style>
