--- a/westchestergis/index.html
+++ b/westchestergis/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
         <style>
          body {
-             width: 960px;
-             height: 500px;
+             width: 100%;
+             height: 100%;
          }
          .mly-wrapper {
              position: relative;
