--- a/highline/index.html
+++ b/highline/index.html
@@ -7,8 +7,8 @@ CTYPE HTML>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
         <style>
          body {
-             width: 960px;
-             height: 500px;
+             width: 100%;
+             height: 100%;
          }
          .mly-wrapper {
              position: relative;
