--- a/fill/index.html
+++ b/fill/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset=utf-8 />
-        <title>Side Walk Slider</title>
+        <title>Fill</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
         <link rel="stylesheet" href="https://npmcdn.com/mapillary-js@1.1.0/dist/mapillary-js.min.css">
         <style>
