--- a/highline/index.html
+++ b/highline/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
         <style>
          body {
+             margin: 0;
+             padding: 0;
              width: 100%;
              height: 100%;
          }
