--- a/bikemap/index.html
+++ b/bikemap/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <title>Mapillary Bikers</title>
@@ -32,7 +32,7 @@
           </div>
           <div class="cartodb-popup-content-wrapper">
                 <div class="cartodb-popup-content">
-              <p><iframe src={{description}}></iframe></p>
+              <p><iframe src={{mapillary_fill}}></iframe></p>
 	      <h4><a href={{mapillary_url}} target="_blank">Full screen</a></h4>	
             </div>
           </div>
