fixed page titles

--- a/curbyourlitter/manhattan.html
+++ b/curbyourlitter/manhattan.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Manhattan Avenue</title>
   <script src="https://npmcdn.com/mapillary-js@1.1.1/dist/mapillary-js.min.js"></script>
   <link rel="stylesheet" href="https://npmcdn.com/mapillary-js@1.1.1/dist/mapillary-js.min.css"/>
   <style>
