fixed page titles

--- a/curbyourlitter/index.html
+++ b/curbyourlitter/index.html
@@ -1,3 +1,7 @@
+<head>
+<title>Curb Your Litter Mapillary Test -- June 11, 2016</title>
+</head>
+<body>
 <html>
 <h1>Curb Your Litter Mapillary Test -- June 11, 2016</h1>
 <html>
@@ -12,3 +16,5 @@
 <li><a href="http://mapillary.github.io/mapillary-js-examples/fillphotomap/?key=1ce6pxSDxbuXtlb0DD6asg" target="_blank">June 10, 2016 (Before)</a></li>
 <li><a href="http://mapillary.github.io/mapillary-js-examples/fillphotomap/?key=OnVYuTlHtPsctRfs2SYsng" target="_blank">June 11, 2016 (After)</a></li>
 </ul>
+</body>
+</html>
