--- a/curbyourlitter/bedford.html
+++ b/curbyourlitter/bedford.html
@@ -29,7 +29,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
     var viewer = new Mapillary.Viewer(
             "slider-2",
             "MkJKbDA0bnZuZlcxeTJHTmFqN3g1dzo5NWEzOTg3OWUxZDI3MjM4",
-            "ZJnDc3-i-rLPnHBkLWS4MA",
+            "rQVkZJbM8YDvap1lP505aQ",
             {
                 "cover": false,
                 "imageplane": false,
@@ -40,7 +40,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 "slider": {
                     keys: {
                         background: "4QV2Qeh-yxsqHQfY8HpjKg",
-                        foreground: "ZJnDc3-i-rLPnHBkLWS4MA", // Same as initial key above
+                        foreground: "rQVkZJbM8YDvap1lP505aQ", // Same as initial key above
                     },
                     initialPosition: 1.0,
                 }
