--- a/curbyourlitter/index.html
+++ b/curbyourlitter/index.html
@@ -7,9 +7,10 @@
 <html>
 <h2>Snapshots (Before & After)</h2>
 <ul>
-<li><a href="bedford.html" target="_blank">Bedford Avenue</a></li>
-<li><a href="manhattan.html" target="_blank">Manhattan Avenue</a></li>
-<li><a href="nassau.html" target="_blank">Nassau Avenue</a></li>
+<li><a href="bedford.html" target="_blank">Bedford & Manhattan</a></li>
+<li><a href="manhattan.html" target="_blank">Manhattan & Nasau</a></li>
+<li><a href="nassau.html" target="_blank">Nassau & Leonard</a></li>
+<li><a href="manhattan2.html" target="_blank">Manhattan & Meserole</a></li>
 </ul>
 <h2>Full photowalks</h2>
 <ul>
