what an embarassing typo

--- a/curbyourlitter/index.html
+++ b/curbyourlitter/index.html
@@ -8,7 +8,7 @@
 <h2>Snapshots (Before & After)</h2>
 <ul>
 <li><a href="bedford.html" target="_blank">Bedford & Manhattan</a></li>
-<li><a href="manhattan.html" target="_blank">Manhattan & Nasau</a></li>
+<li><a href="manhattan.html" target="_blank">Manhattan & Nassau</a></li>
 <li><a href="nassau.html" target="_blank">Nassau & Leonard</a></li>
 <li><a href="manhattan2.html" target="_blank">Manhattan & Meserole</a></li>
 </ul>
