quick source fix

--- a/mapillaryembedwizard/index.html
+++ b/mapillaryembedwizard/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="viewer-preview">
-        <iframe id="preview" src="https://kingofirony.github.io/fill/index.html"></iframe>
+        <iframe id="preview" src="http://mapillary.github.io/mapillary-js-examples/fill2/index.html"></iframe>
     </div>
     <div id="options-menu">
         <h1>Mapillary Embed Wizard</h1>
