--- a/fill2/index.html
+++ b/fill2/index.html
@@ -28,15 +28,15 @@
         .mapillary-js {
             position: relative;
             height: 100%;
-            width: 66%;
+            width: 100%;
         }
 
         #map {
-            position: absolute;
-            width: 34%;
-            top: 0;
-            right: 0;
-            bottom: 0;
+            position: fixed;
+            width: 25%;
+            height:30%;
+            left: 2%;
+            bottom: 2%;
             z-index: 100;
         }
     </style>
