Updates clientID link and viewer version

--- a/mapillaryembedwizard/index.html
+++ b/mapillaryembedwizard/index.html
@@ -7,9 +7,9 @@
     <title>Mapillary Embed Wizard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://npmcdn.com/mapillary-js@1.4.1/dist/mapillary-js.min.css" rel="stylesheet">
+    <link href='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.css' rel='stylesheet'/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://npmcdn.com/mapillary-js@1.4.1/dist/mapillary-js.min.js" type="text/javascript"></script>
+     <script src='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.js'></script>
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <br>
             <div class="tooltip">
                 <input type="text" id="clientId" placeholder="Mapillary Client id">
-                <span class="tooltiptext">Get a unique identifier for your embed <a href="http://www.mapillary.com/map/settings/integrations/new" target="_blank">here</a></span></div>
+                <span class="tooltiptext">Get a unique identifier for your embed <a href="https://www.mapillary.com/app/settings/developers" target="_blank">here</a></span></div>
             <br>
             <br>
             <h4 id="show-advanced"> Click for Advanced Settings</h4>
