--- a/carto_widget/index.html
+++ b/carto_widget/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Mapillary Carto Widget</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-  <div class="loader"></div>
+    <div class="loader"></div>
     <img class="LogoBlack" src="./mapillary_logo_black.svg"></img>
     <div class="mly-wrapper">
         <h5 class="unselectable" id="minimize">hide</h5>
@@ -28,6 +29,11 @@
     </div>
     <div id='map'></div>
     </div>
+
+    <div id="snippet-box">
+        <h2> Click on the blue lines or carto features to use the mapillary viewer.</h3>
+    <p id="close-window"> Close Window</p>
+  </div>
 
     <!-- include cartodb.js library -->
 
