Updates fill version in head

--- a/fill2/index.html
+++ b/fill2/index.html
@@ -4,12 +4,13 @@
     <meta charset=utf-8 />
     <title>Fill</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <link rel="stylesheet" href="https://npmcdn.com/mapillary-js@1.4.2/dist/mapillary-js.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.css" />
     <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.4/mapbox-gl.js'></script>
     <script src="https://mapzen.com/tangram/0.4/tangram.min.js"></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.4/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.css' rel='stylesheet'/>
+    <script src='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.js'></script>
     <style>
         body {
             margin: 0;
@@ -51,7 +52,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.js  "></script>
     <script src="https://spatialserver.github.io/Leaflet.MapboxVectorTile/dist/Leaflet.MapboxVectorTile.js"></script>
-    <script src="https://npmcdn.com/mapillary-js@1.4.2/dist/mapillary-js.min.js"></script>
 
     <script src="mpy.js"></script>
 </body>
