Parcell viewer use sattelite map and remove faulty layer from parcells

--- a/parcelviewer/index.html
+++ b/parcelviewer/index.html
@@ -25,10 +25,10 @@
 
     <div class="wrapper" class="container">
       <div class="row">
-        <div class="six columns">
+        <div class="six columns" style="overflow:auto">
           <div class="container">
             <div id="mly-wrapper">
-              <h3 style="cursor:pointer" id="mly-back-button"><<< Back To List Of Image</h3>
+              <h3 style="cursor:pointer" id="mly-back-button"><<< Back To List Of Images</h3>
               <div id="mly" style="width: 640px; height: 480px;"></div>
             </div>
             <div id="image-list">
