--- a/fill/index.html
+++ b/fill/index.html
@@ -3,7 +3,7 @@
         <meta charset=utf-8 />
         <title>Fill</title>
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-        <link rel="stylesheet" href="https://npmcdn.com/mapillary-js@1.2.1/dist/mapillary-js.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/mapillary-js@1.6.0/dist/mapillary-js.min.css">
         <style>
          body {
              margin: 0;
@@ -29,7 +29,7 @@
             <div id="mly"></div>
             <div id="map"></div>
         </div>
-        <script src="//npmcdn.com/mapillary-js@1.2.1/dist/mapillary-js.min.js"></script>
+        <script src="//unpkg.com/mapillary-js@1.6.0/dist/mapillary-js.min.js"></script>
         <script src="mpy.js"></script>
     </body>
 </html>
