updated MJS version to 2.1.0

--- a/fill2/index.html
+++ b/fill2/index.html
@@ -9,8 +9,8 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.4/mapbox-gl.js'></script>
     <script src="https://mapzen.com/tangram/0.4/tangram.min.js"></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.4/mapbox-gl.css' rel='stylesheet' />
-    <link href='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.css' rel='stylesheet'/>
-    <script src='https://npmcdn.com/mapillary-js@1.6.0/dist/mapillary-js.min.js'></script>
+    <script src='https://unpkg.com/mapillary-js@2.1.0/dist/mapillary.min.js'></script>
+    <link href='https://unpkg.com/mapillary-js@2.1.0/dist/mapillary.min.css' rel='stylesheet' />
     <style>
         body {
             margin: 0;
