--- a/route.html
+++ b/route.html
@@ -25,7 +25,7 @@
             'mly',
             // Replace this with your own client ID from mapillary.com
             'QjI1NnU0aG5FZFZISE56U3R5aWN4ZzowODkzY2RjNjM1ZmEwYTVi',
-            '2yFbES2-ogx4Cz8IOsaThQ',
+            'uNrypmwBznPFHVkhVrV5yQ',
             {
                 component: {
                     cover: false,
